--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Video Back Hack</title>
+    <style>
+        body {
+          background: black;
+          color:#CCCCCC; 
+        }
+        #c2 {
+          background-image: url(media/foo.png);
+          background-repeat: no-repeat;
+        }
+        div {
+          float: left;
+            border :1px solid #444444;
+          padding:10px;
+          margin: 10px;
+          background:#3B3B3B;
+        }
+    </style>
   </head>
 
   <body>
-    The content of the document......
+    <div>
+      <video id="video" src="media/video.mp4" controls="true"/>
+    </div>
+    <div>
+      <canvas id="c1" width="160" height="96"></canvas>
+      <canvas id="c2" width="160" height="96"></canvas>
+    </div>
   </body>
 
 </html>
