--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Video Back Hack</title>
     <style>
-        body {
-          background: black;
-          color:#CCCCCC; 
-        }
-        #c2 {
-          background-image: url(media/foo.png);
-          background-repeat: no-repeat;
-        }
-        div {
-          float: left;
-            border :1px solid #444444;
-          padding:10px;
-          margin: 10px;
-          background:#3B3B3B;
-        }
+      body {
+        background: black;
+        color:#CCCCCC; 
+      }
+      #c2 {
+        background-image: url(media/foo.png);
+        background-repeat: no-repeat;
+      }
+      div {
+        float: left;
+        border :1px solid #444444;
+        padding:10px;
+        margin: 10px;
+        background:#3B3B3B;
+      }
     </style>
   </head>
 
@@ -29,6 +28,6 @@
       <canvas id="c1" width="160" height="96"></canvas>
       <canvas id="c2" width="160" height="96"></canvas>
     </div>
+  <script type="text/javascript" src="js/processor.js"></script>
   </body>
-
 </html>
