Got the code working in FF

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -36,7 +36,7 @@
 
     <div>
       <div id="video-cont">
-        <video id="mainVideo" src="media/video-3.mp4" autoplay></video>
+        <video id="mainVideo" src="media/video-3.mp4"></video>
       </div>
       <canvas id="mainCanvas"></canvas>
       <a id="btn-play" href="#">Play</a>
