Added the server code

--- a/front-end/video.html
+++ b/front-end/video.html
@@ -58,7 +58,7 @@
 
     <div>
       <div id="video-cont">
-        <video id="tutor-video" width="214" src="media/video-out.mp4"></video>
+        <video id="tutor-video" width="214" src="media/video-4.mp4"></video>
       </div>
       <canvas id="mainCanvas"></canvas>
 
